--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,7 @@ applications:
             - npm ci
         build:
           commands:
-            - npm run build
+            - npm run build:amplify
       artifacts:
         baseDirectory: .next
         files:
