--- a/amplify.yml
+++ b/amplify.yml
@@ -7,13 +7,15 @@ applications:
         preBuild:
           commands:
             - npm ci
+            - npm run --silent
         build:
           commands:
             - npm run build:amplify
       artifacts:
-        baseDirectory: .next
+        baseDirectory: out
         files:
           - '**/*'
       cache:
         paths:
           - node_modules/**/*
+          - .next/cache/**/*
