--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@aws-sdk/client-s3": "^3.600.0",
+    "googleapis": "^120.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["baseball", "api", "trackman"],
+  "keywords": [
+    "baseball",
+    "api",
+    "trackman"
+  ],
   "author": "SDSU Baseball Team",
   "license": "MIT"
 }
